# soco2root

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  SOCOLinkDef.h  main.cpp  readme.md
examples/: Co-56.evt  FlexibleCalibrationAndGGMatrix.C  TChainEventLoop.C
src/: Event.cpp  Event.h  EventReader.cpp  EventReader.h  FSUtils.cpp  FSUtils.h  Hit.cpp  Hit.h  RootWriter.cpp  RootWriter.h  Soco2Root.cpp  Soco2Root.h
